--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
 							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="articles/cellular3/">Read more</a>
 						</div>
 					</div>
+					<div class="mdl-cell mdl-card mdl-shadow--4dp">
+						<div class="mdl-card__media" style="background-image:url('assets/img/thumbnail-mpincome.png')"></div>
+						<div class="mdl-card__title">
+							<h2 class="mdl-card__title-text">Elected Times and Income of MPs</h2>
+						</div>
+						<div class="mdl-card__supporting-text">The relationship between number of times elected and annual income of Member of the House of Representatives in Japan.</div>
+						<div class="mdl-card__actions mdl-card--border">
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="articles/cellular3/">Read more</a>
+						</div>
+					</div>
 				</div>
 			</main>
 		</div>
