--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<link rel="stylesheet" href="assets/skyblue.min.css">
 		<title>kaz-ogiwara.github.io</title>
 	</head>
 	<body>
-		<h2>Hello World!</h2>
+		<style>
+			body {
+				margin-top: 20px;
+			}
+			
+			.card {
+				border: 1px solid #f00;
+			}
+		</style>
+		<div class="container">
+			<div class="row">
+				<div class="col xs-12">
+					<h1>kaz-ogiwara.github.io</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col xs-4">
+					<div class="card">
+						<div class="card-title"></div>
+						<div class="card-image">
+							<img src="assets/sample.jpg">
+						</div>
+						<div class="card-content">
+							<p>I am a very simple card. I am good at containing small bits of information.
+							I am convenient because I require little markup to use effectively.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col xs-8">
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
 
