--- a/index.html
+++ b/index.html
@@ -3,51 +3,20 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<<<<<<< HEAD
 		<link rel="stylesheet" href="assets/skyblue.min.css">
-=======
 		<meta name="description" content="A self introduction page of Kazuki OGIWARA.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
->>>>>>> 42ad2b4abf1b4c420162e0f0360bdbbaae9bdd2b
 		<title>kaz-ogiwara.github.io</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.min.css" />
 		<link rel="stylesheet" href="assets/css/top.css" />
 	</head>
 	<body>
-<<<<<<< HEAD
 		<style>
-			body {
-				margin-top: 20px;
-			}
-			
 			.card {
 				border: 1px solid #f00;
 			}
 		</style>
-		<div class="container">
-			<div class="row">
-				<div class="col xs-12">
-					<h1>kaz-ogiwara.github.io</h1>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col xs-4">
-					<div class="card">
-						<div class="card-title"></div>
-						<div class="card-image">
-							<img src="assets/sample.jpg">
-						</div>
-						<div class="card-content">
-							<p>I am a very simple card. I am good at containing small bits of information.
-							I am convenient because I require little markup to use effectively.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col xs-8">
-				</div>
-			</div>
-=======
 		<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 			<header class="mdl-layout__header">
 				<div class="mdl-layout__title">kaz-ogiwara.github.io</div>
@@ -60,28 +29,16 @@
 				</div>
 				<div class="mdl-grid">
 					<div class="mdl-cell mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__media" style="background-image:url('assets/img/thumbnail-cellular3.png')"></div>
+						<div class="mdl-card__media" style="background-image:url('assets/img/thumbnail-temperature.png')"></div>
 						<div class="mdl-card__title">
-							<h2 class="mdl-card__title-text">Transiting Bubble Chart</h2>
+							<h2 class="mdl-card__title-text">140 Years of Temperature in Tokyo</h2>
 						</div>
-						<div class="mdl-card__supporting-text">Time series transition of sales, operating profit, and market capital among major Japanese mobile-service providers (NTT Docomo, KDDI, and SoftBank).</div>
 						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="articles/cellular3/">Read more</a>
-						</div>
-					</div>
-					<div class="mdl-cell mdl-card mdl-shadow--4dp">
-						<div class="mdl-card__media" style="background-image:url('assets/img/thumbnail-mpincome.png')"></div>
-						<div class="mdl-card__title">
-							<h2 class="mdl-card__title-text">Elected Times and Income of MPs</h2>
-						</div>
-						<div class="mdl-card__supporting-text">The relationship between number of times elected and annual income of Member of the House of Representatives in Japan.</div>
-						<div class="mdl-card__actions mdl-card--border">
-							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="articles/cellular3/">Read more</a>
+							<a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="temperature/">Read more</a>
 						</div>
 					</div>
 				</div>
 			</main>
->>>>>>> 42ad2b4abf1b4c420162e0f0360bdbbaae9bdd2b
 		</div>
 	</body>
 </html>
