Add date below the title

--- a/temperature/index.html
+++ b/temperature/index.html
@@ -13,7 +13,7 @@
 		<div id="container">
 			<div id="row">
 				<h2>140 Years of Temperature in Tokyo</h2>
-				<h4>Kazuki OGIWARA</h4>
+				<h4>Kazuki OGIWARA / 30 December 2016</h4>
 				<p>
 					Visualized temperature in Tokyo from 1876 to 2015.<br>
 					Similar to other cities in the world, Tokyo is gradually becoming hotter.<br>
