--- a/temperature/index.html
+++ b/temperature/index.html
@@ -15,10 +15,12 @@
 				<h2>140 Years of Temperature in Tokyo</h2>
 				<h4>Kazuki OGIWARA / 30 December 2016</h4>
 				<p>
-					Visualized temperature in Tokyo from 1876 to 2015.<br>
-					Similar to other cities in the world, Tokyo is gradually becoming hotter.<br>
+					Mapped average temperatures on each day in Tokyo from 1876 to 2015.<br>
+					left: 1876 - right: 2015<br>
+					top: 1 January - bottom: 31 December<br>
 				</p>
 				<p>
+					Similar to other cities in the world, Tokyo is gradually becoming hotter.<br>
 					Now the city has longer / hotter summer and shorter / warmer winter than 140 years ago.<br>
 					(When I arrived Edinburgh in August, I was surprised how comfortable it is.)<br>
 				</p>
