Change page title

--- a/tourists/index.html
+++ b/tourists/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=9" />
-		<title>Chord Diagram of Tourists</title>
+		<title>Number of tourists to Japan</title>
 		<style>
 			*{
 				margin:0 auto;
