--- a/tourists/index.html
+++ b/tourists/index.html
@@ -57,7 +57,7 @@
 			var json;
 			
 			$(function(){
-				var url = "data.json";
+				var url = "./data.json";
 
 				$.getJSON(url).done(function(data){
 					json = data;
@@ -65,7 +65,7 @@
 					
 					// p5 and sketch are loaded after json was stored in a variable
 					$.getScript("//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.min.js");
-					$.getScript("sketch.js");
+					$.getScript("./sketch.js");
 				});
 			});
 		</script>
