--- a/index.html
+++ b/index.html
@@ -4,45 +4,12 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="description" content="Data visualizations portfolio by Kazuki OGIWARA.">
+		<link rel="stylesheet" href="assets/css/default.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 		<title>Kazuki OGIWARA: Portfolio</title>
 		<style>
-			* {
-				margin: 0;
-				padding: 0;
-				font-family: 'Roboto', sans-serif;
-				letter-spacing: 1px;
-			}
-
-			html,body {
-				width: 100%;
-				height: 100%;
-				background-image: url('index/img/ep_naturalwhite.png');
-				background-color: rgba(255,255,255,1);
-			}
-			
-			#cover {
-				position: fixed;
-				z-index: 100;
-				width: 100%;
-				height: 100%;
-				top: 0;
-				left: 0;
-				background-color: rgb(255,255,255);
-				text-align: center;
-				color: rgba(0,0,0,0.8);
-				vertical-align: middle;
-				line-height: 100%;
-			}
-			
-			#cover p {
-				position: fixed;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				color: rgba(0,0,0,0.8);
-				font-family: Helvetica;
-				font-size: small;
+			body {
+				background-image: url('assets/img/ep_naturalwhite.png');
 			}
 
 			#container{
@@ -59,6 +26,11 @@
 			
 			.title h1 {
 				margin-bottom: 20px;
+				margin-left: 20px;
+			}
+			
+			.title h3 {
+				margin-left: 21px;
 			}
 			
 			#works {
@@ -67,27 +39,37 @@
 			}
 			
 			.card {
-				width: 90%;
-				height: 200px;
+				margin: 0 auto;
+				width: calc(100% - 40px);
+				height: 180px;
 				margin-bottom: 60px;
 			}
 			
 			.card * {
+				-webkit-transition: all 0.4s;
+				transition: all 0.4s;
 			}
 			
-			.card-image{
-				height: 200px;
+			.card-image {
+				height: 100%;
 				margin:0 auto;
 				background-position: center center;
 				background-size: cover;
 				background-repeat: no-repeat;
-				box-shadow: 0px 0px 1px rgba(255,255,255,0.5);
 			}
 			
 			.card-title {
 				margin-top: 10px;
 				font-size: small;
-				color: rgba(0,0,0,0.6);
+				color: rgba(0,0,0,0.7);
+			}
+			
+			.card:hover .card-image {
+		    box-shadow: 0 2px 6px 0 rgba(100,200,150,0.16), 0 0 0 1px rgba(100,200,150,0.04);
+			}
+
+			.card:hover .card-title {
+		    color: rgba(80,30,10,0.9);
 			}
 		</style>
 	</head>
