--- a/viz/nobelprize/index.html
+++ b/viz/nobelprize/index.html
@@ -1,4 +1,18 @@
-<?php require_once(dirname(__FILE__) . "/../../php/header.php"); ?>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="description" content="Data visualizations portfolio by Kazuki OGIWARA.">
+		<link rel="stylesheet" href="../../assets/css/default.css">
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script src="../../assets/js/default.js"></script>
+    <title>Nobel Prize laureattes getting older</title>
+	</head>
+	<body>
+		<div id="cover">
+			<p>Loading...</p>
+		</div>
     <style>
       * {
         color: #666;
@@ -324,7 +338,6 @@
         margin-bottom: 40px;
       }
     </style>
-		<title>Scientists Making a Queue: How Nobel Prize laureates are Getting Older</title>
     <div id="section-title">
       <div class="cover"></div>
       <h1>Scientists Making a Queue:<br>How Nobel Prize laureates are Getting Older</h1>
@@ -371,7 +384,6 @@
     <div class="icon"></div>
     <div class="icon"></div>
     <div class="icon"></div>
-    <script src="../../js/default.js"></script>
     <script>
       var minYear = 1901;
       var maxYear = 2016;
@@ -588,4 +600,5 @@
         });
       });
     </script>
-<?php require_once(dirname(__FILE__) . "/../../php/footer.php"); ?>
+  </body>
+</html>
