--- a/index.html
+++ b/index.html
@@ -20,17 +20,24 @@
 			
 			.title {
 				margin-top: 40px;
-				margin-bottom: 80px;
+				margin-bottom: 60px;
 				color: rgba(0,0,0,0.65);
+				margin-left: 20px;
 			}
 			
 			.title h1 {
 				margin-bottom: 20px;
-				margin-left: 20px;
 			}
 			
 			.title h3 {
-				margin-left: 21px;
+				margin-bottom: 40px;
+				margin-left: 1px;
+			}
+			
+			.title p {
+				margin-left: 1px;
+				font-size: small;
+				color: rgba(0,0,0,0.55);
 			}
 			
 			#works {
@@ -79,6 +86,7 @@
 			<div class="title">
 				<h1>Data Visualizations Portfolio</h1>
 				<h3>Kazuki OGIWARA</h3>
+				<p>All features should work correctly when you are using Google Chrome on Max OS X</p>
 			</div>
 			<div id="works"></div>
 		</div>
