--- a/viz/pyramid/index.html
+++ b/viz/pyramid/index.html
@@ -1,9 +1,28 @@
-<?php require_once(dirname(__FILE__) . "/../../php/header.php"); ?>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="description" content="Data visualizations portfolio by Kazuki OGIWARA.">
+		<link rel="stylesheet" href="../../assets/css/default.css">
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script src="../../assets/js/default.js"></script>
     <title class="hascover">Population Pyramids</title>
+	</head>
+	<body>
+		<div id="cover">
+			<p>Loading...</p>
+		</div>
     <style>
       *{
         color: rgba(255,255,255,0.9);
       }
+			
+			html,body {
+				width: 100%;
+				height: 100%;
+				overflow: hidden;
+			}
       
       .box{
         position: fixed;
@@ -156,7 +175,7 @@
         $.getScript(src, function() {
           status++;
           if (status == 2) {
-            $.getScript("default.js");
+            $.getScript("script.js");
           }
         });
       }
@@ -176,4 +195,5 @@
         getScript("Detector.js");
       });
     </script>
-<?php require_once(dirname(__FILE__) . "/../../php/footer.php"); ?>
+	</body>
+</html>
