--- a/viz/trade/index.html
+++ b/viz/trade/index.html
@@ -1,5 +1,18 @@
-<?php require_once(dirname(__FILE__) . "/../../php/header.php"); ?>
-		<title></title>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="description" content="Data visualizations portfolio by Kazuki OGIWARA.">
+		<link rel="stylesheet" href="../../assets/css/default.css">
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script src="../../assets/js/default.js"></script>
+		<title>Import and Export between Japan and the world</title>
+	</head>
+	<body>
+		<div id="cover">
+			<p>Loading...</p>
+		</div>
 		<style>
 			*{
 				color: rgba(255,255,255,0.9);
