--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<div class="title">
 				<h1>Data Visualizations Portfolio</h1>
 				<h3>Kazuki OGIWARA</h3>
-				<p>All features should work correctly when you are using Google Chrome on Max OS X</p>
+				<p>All features should work correctly when you are using Google Chrome on Mac OS X</p>
 			</div>
 			<div id="works"></div>
 		</div>
