--- a/viz/pyramid/index.html
+++ b/viz/pyramid/index.html
@@ -166,7 +166,7 @@
 				<div class="legend m">Male</div>
 			</div>
     </div>
-    <button class="btn-control play"><i class="fa fa-play"></i></button>
+    <button class="btn-control stop"></button>
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
     <script>
       var status = 0;
