--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			}
 			
 			.card * {
-				-webkit-transition: all 0.4s;
-				transition: all 0.4s;
+				-webkit-transition: all 0.2s;
+				transition: all 0.2s;
 			}
 			
 			.card-image {
@@ -72,11 +72,11 @@
 			}
 			
 			.card:hover .card-image {
-		    box-shadow: 0 2px 6px 0 rgba(100,200,150,0.16), 0 0 0 1px rgba(100,200,150,0.04);
+		    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
 			}
 
 			.card:hover .card-title {
-		    color: rgba(80,30,10,0.9);
+		    color: rgba(20, 80, 160, 0.8);
 			}
 		</style>
 	</head>
