--- a/viz/collisions/index.html
+++ b/viz/collisions/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="description" content="Data visualizations portfolio by Kazuki OGIWARA.">
+		<link rel="stylesheet" href="../../assets/css/default.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.1/leaflet.css" rel="stylesheet" />
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script src="../../assets/js/default.js"></script>
     <title>Vehicle collisions in Edinburgh</title>
     <style>
-      *{
-        margin: 0;
+      * {
         color: rgba(255,255,255,0.9);
-        font-family: Helvetica;
       }
       
-      html,body,#content,#map{
+      #content,#map{
         width: 100%;
         height: 100%;
       }
@@ -43,9 +46,10 @@
       #title-block{
         z-index: 50;
         position: fixed;
-        top: 0;
-        left: 0;
+        top: 10px;
+        left: 10px;
         padding: 10px;
+        background: rgba(0,0,0,0.7);
         color: rgba(255,255,255,0.7);
         font-size: small;
         text-shadow:
