--- a/viz/musicxml/index.html
+++ b/viz/musicxml/index.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="description" content="Data visualizations portfolio by Kazuki OGIWARA.">
+		<link rel="stylesheet" href="../../assets/css/default.css">
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script src="../../assets/js/default.js"></script>
     <title>Music XML</title>
     <style>
       *{
-        margin: 0;
         color: rgba(255,255,255,0.9);
-        font-family: Helvetica;
       }
 
-      html,body{
-        width: 100%;
-        height: 100%;
-      }
-      
-      #cover{
-        background-color: rgba(255,255,255,0.8);
-        color: rgba(0,0,0,0.8);
-        padding-top: 300px;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 500;
-        text-align: center;
-      }
-      
       .box{
         background-color: rgba(0,0,0,0.6);
         display: none;
@@ -51,13 +36,13 @@
         left: 10px;
         top: 10px;
         width: 550px;
-        height: 170px;
+				height: 190px;
         padding: 10px;
       }
     </style>
   </head>
   <body>
-    <div id="cover">Loading...</div>
+    <div id="cover"><p>Loading...</p></div>
     <div id="canvas-area"></div>
     <div class="box title">
 			<h1>Visualization of Music Score</h1>
