--- a/viz/collisions/index.html
+++ b/viz/collisions/index.html
@@ -28,6 +28,7 @@
         right: -25%;
         background-color: rgba(0,0,0,0.7);
         padding: 10px;
+				padding-top: 44px;
         font-size: small;
         
         -webkit-transition: right 0.5s;
@@ -46,7 +47,7 @@
       #title-block{
         z-index: 50;
         position: fixed;
-        top: 10px;
+        top: 42px;
         left: 10px;
         padding: 10px;
         background: rgba(0,0,0,0.7);
