--- a/viz/earthquakes/index.html
+++ b/viz/earthquakes/index.html
@@ -5,10 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=9" />
 		<title>Earthquakes</title>
 		<link rel="stylesheet" href="//stanko.github.io/skyblue/css/skyblue.min.css" />
+		<link rel="stylesheet" href="../../assets/css/default.css" />
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script src="../../assets/js/default.js"></script>
 		<style>
 			*{
-				margin:0 auto;
-				padding:0;
 				color: rgba(255,255,255,0.9);
 				font-family: Helvetica, sans-serif;
 			}
@@ -25,14 +26,6 @@
 				color: rgba(255,255,255,0.7);
 			}
 			
-			#loading{
-				width: 100%;
-				height: 360px;
-				padding-top: 100px;
-				text-align: center;
-				z-index: 100000;
-			}	
-
 			canvas{
 				display:block;
 				margin:auto;
@@ -115,18 +108,11 @@
 		<div id="tooltip">
 			<div id="tooltip-inner"></div>
 		</div>
-		<div id="loading">
-			<img src="img/loading.gif" alt="" />
-			<div>Loading...</div>
-		</div>
-		<br>
-		<script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script>
 			var json;
 			
 			function loadJson() {
 				$("canvas").remove();
-				$("#loading").show();
 				
 				var time = $("#select-time").val();
 				var mag  = $("#select-mag").val();
@@ -135,8 +121,6 @@
 
 				$.getJSON(url).done(function(data){
 					json = data;
-					
-					$("#loading").hide();
 
 					// p5 and sketch are loaded after json was stored in a variable
 					$.getScript("//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.min.js");
