--- a/viz/tourists/index.html
+++ b/viz/tourists/index.html
@@ -2,20 +2,26 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=9" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link rel="stylesheet" href="../../assets/css/default.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+		<script src="../../assets/js/default.js"></script>
 		<title>Number of tourists to Japan</title>
 		<style>
 			*{
-				margin:0 auto;
-				padding:0;
 				color: #f3f3f3;
+			}
+			
+			body {
 				background-color:rgb(10,20,30);
-				font-family: Helvetica, sans-serif;
 			}
 			
 			.row{
+				width: 98%;
 				max-width: 800px;
 				padding-top: 20px;
+				margin: 0 auto;
 			}
 			
 			.indent{
