--- a/viz/dissolution/index.html
+++ b/viz/dissolution/index.html
@@ -9,7 +9,7 @@
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script src="../../assets/js/default.js"></script>
 		<style>
-			@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+			@import url(https://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 			
 			body {
 				/* Thanks to: https://www.toptal.com/designers/subtlepatterns/white-wall-3/ */
@@ -18,7 +18,7 @@
 
 			#container {
 				margin: 0 auto;
-				width: 96%;
+				width: 90%;
 				max-width: 800px;
 			}
 			
@@ -58,7 +58,6 @@
 			}
 			
 			#notes-block {
-				margin-top: 60px;
 			}
 			
 			#notes-block p,#notes-block a {
@@ -68,12 +67,19 @@
 			}
 			
 			#content-block {
+				margin: 0 auto;
 				margin-top: 24px;
+				width: 100%;
+				height: 1300px;
+				overflow-x: scroll;
+			}
+			
+			#countries-wrapper {
+				padding: 0 100px 0 100px;
+				min-width: 700px;
 			}
 			
 			#countries {
-				margin: 0 auto;
-				width: 70%;
 				display: grid;
 				grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 			}
@@ -178,7 +184,7 @@
 			#years {
 				position: absolute;
 				width: calc(100% + 80px);
-				margin-left: -80px;
+				margin-left: -40px;
 				padding-top: 160px;
 				height: calc(100% - 100px);
 			}
@@ -193,6 +199,7 @@
 			}
 			
 			.tooltip {
+				z-index: 10;
 				position: absolute;
 				font-size: small;
 				width: 240px;
@@ -243,8 +250,10 @@
 				<p>一方、解散の回数で日本に次ぐカナダや英国では、それぞれ2007年と2011年に解散の濫用を制限するための法改正が行われた。日本でも遠くないうちに、解散権の適用を厳格化する機運が高まるかもしれない。</p>
 			</div>
 			<div id="content-block">
-				<div id="countries">
-					<div id="years"></div>
+				<div id="countries-wrapper">
+					<div id="countries">
+						<div id="years"></div>
+					</div>
 				</div>
 			</div>
 			<div id="notes-block">
