Set og description and image

--- a/viz/dissolution/index.html
+++ b/viz/dissolution/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=9" />
 		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<meta name="description" content="戦後のG7各国において解散・総選挙がいつ行われてきたか時系列で表示した。">
+		<meta property="og:image" content="../../assets/img/thumbnail-dissolution.png">
 		<title>G7各国の解散・総選挙タイムライン</title>
 		<link rel="stylesheet" href="../../assets/css/default.css" />
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
