--- a/index_profile.html
+++ b/index_profile.html
@@ -67,10 +67,8 @@
 					}
 				</style>
 				<section>
-					<h2>SUMMARY</h2>
 					<h1>Kazuki OGIWARA</h1>
 					<p class="subtitle">Data Visualization Engineer in Tokyo</p>
-					<p>Date of Birth: 11th June 1987</p>
 					<p><a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a></p>
 				</section>
 				<section>
@@ -80,18 +78,14 @@
 							<span class="bold">University of Edinburgh</span>, Edinburgh, United Kingdom
 						</h3>
 						<p class="gray">September 2016 - August 2017</p>
-						<p class="degree">Degree: Master of Science (Design and Digital Media) With Merit</p>
-						<p class="gray">
-							- Studied digital design and pursued data visualization as the final project<br>
-						</p>
+						<p class="degree">Master of Science (Design and Digital Media)</p>
 					</div>
 					<div class="subsection">
 						<h3>
 							<span class="bold">University of Tsukuba</span>, Tsukuba, Japan
 						</h3>
 						<p class="gray">April 2006 - March 2010</p>
-						<p>Degree: Bachelor of Human Science (Social Psychology) GPA: 3.81</p>
-						<p class="gray">- Gained skills to analyze data by using statistics</p>
+						<p>Bachelor of Human Science (Social Psychology)</p>
 					</div>
 				</section>
 				<section>
@@ -100,7 +94,6 @@
 						<h3>
 							<span class="bold">Toyo Keizai Inc.</span>, Tokyo, Japan
 						</h3>
-						<p>A business and financial publisher that also offers news media and database services</p>
 						<p class="gray">April 2010 - Present</p>
 					</div>
 					<div class="subsection">
@@ -108,8 +101,6 @@
 							<span class="bold">Data Visualization Engineer</span> at Digital Media Department
 						</h3>
 						<p class="gray">September 2017 - Present</p>
-						<p>- Developing additional web services to existing news website</p>
-						<p>- Creating web tools for editors to make charts (e.g. bar chart) easily</p>
 					</div>
 					<div class="subsection">
 						<h3 class="leave">Leave of absence to study abroad</h3>
@@ -120,28 +111,11 @@
 							<span class="bold">Database and Web Developer</span> at Database Business Department
 						</h3>
 						<p class="gray">April 2014 - August 2016</p>
-						<p>- Launched web services for investors to see listed companies' data</p>
 					</div>
 					<div class="subsection">
 						<h3>
 							<span class="bold">Data Editor</span> at Database Business Department
 						</h3>
 						<p class="gray">April 2010 - March 2014</p>
-						<p>- Managed a finance database and improved the web and database system</p>
-					</div>
-				</section>
-				<section>
-					<h2>SKILLS</h2>
-					<div class="subsection">
-						<h4>Programming languages</h4>
-						<p>- 6 years: JavaScript (D3.js, Three.js, p5.js, jQuery), SQL Server, PHP, CSS, HTML</p>
-						<p>- 3 years: MySQL, Java (Processing), ASP.NET</p>
-					</div>
-					<div class="subsection">
-						<h4>Other Skills</h4>
-						<p>- Data Visualization (From database architechture to front-end and design)</p>
-						<p>- Web Development (Launched several websites, for both public and internal use)</p>
-						<p>- Statistics</p>
-						<p>- Finance and corporate analisys</p>
 					</div>
 				</section>
