--- a/viz/jpycoins/index.html
+++ b/viz/jpycoins/index.html
@@ -30,6 +30,11 @@
 					</button>
 				</div>
 			</div>
+			<div id="article-block">
+				<p>This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
+				<p>It seems that rapid increase of 1 yen coin issued around 1990 is due to introduction of consumption tax in Japan (3% for all goods).</p>
+				<p>The data source is <a href="https://www.mint.go.jp/eng/coin-eng/eng_number_of_coin_production28.html" target="_blank">provided by Japan Mint</a>.</p>
+			</div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
