--- a/viz/jpycoins/description.html
+++ b/viz/jpycoins/description.html
@@ -148,6 +148,7 @@
 				<p>This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
 				<p>The overall design tone is based on music equalizers, with volume-like bars on the upper side and slider with lines on the lower side.</p>
 				<p>This is the first time for me to develop a mobile-first web application: I prioritised design and functionality in mobile, and then adjusted them for tablet and desktop version.</p>
+				<p>While I considered to make the visualization by using only line chart at first, just visualizing with a chart was somehow unimpressive. Thus I added slider and animation, using P5.js.</p>
 				<p>The data source is <a href="https://www.mint.go.jp/eng/coin-eng/eng_number_of_coin_production28.html" target="_blank">provided by Japan Mint</a>.</p>
 				<p><a class="seetheapp" href="https://kaz-ogiwara.github.io/viz/jpycoins/">See the app</a></p>
 			</div>
