Add link to eyecatch, change font size

--- a/viz/jpycoins/description.html
+++ b/viz/jpycoins/description.html
@@ -48,19 +48,19 @@
 			}
 			
 			#title-block .date {
-				font-size: 0.8rem;
+				font-size: 0.9rem;
 			}
 
 			#title-block h1 {
 				margin-top: 12px;
-				font-size: 1.1rem;
+				font-size: 1.2rem;
 				font-weight: bold;
 				color: #444;
 			}
 				
 			#title-block h2 {
 				margin-top: 8px;
-				font-size: 0.8rem;
+				font-size: 0.9rem;
 			}
 			
 			#eyecatch {
@@ -74,7 +74,6 @@
 			}
 			
 			#article-block p {
-				font-size: 0.9rem;
 				line-height: 1.6rem;
 				margin-bottom: 16px;
 			}
@@ -143,7 +142,9 @@
 				<h1>Just Visualization: Japanese Coins</h1>
 				<h2>Number of Coins Issued in Japan from 1948 to 2016</h2>
 			</div>
-			<amp-img id="eyecatch" src="img/eyecatch.png" width="830" height="630" layout="responsive"></amp-img>
+			<a href="https://kaz-ogiwara.github.io/viz/jpycoins/">
+				<amp-img id="eyecatch" src="img/eyecatch.png" width="830" height="630" layout="responsive"></amp-img>
+			</a>
 			<div id="article-block">
 				<p>This visualization shows the number of coins issued in Japan from 1948 to 2016. By tapping, swiping, clicking or dragging on line chart, you can move the slider and see another year. The slider can also be controlled with the button on the bottom. Numbers just under bars are the detail number of coins issued for that year (unit: 1,000 pcs).</p>
 				<p>The overall design tone is based on music equalizers, with volume-like bars on the upper side and slider with lines on the lower side.</p>
