Fix tap event on top-right icon

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body class="home">
     <div id="container">
 			<div id="icons-block">
-				<a href="https://kaz-ogiwara.github.io/"><i class="material-icons" id="icon-home">home</i></a>
-				<a id="link-menu"><i class="material-icons" id="icon-menu">menu</i></a>
+				<i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
+				<i class="material-icons" id="icon-menu">menu</i>
 				<div id="menu">
 					<div id="menu-cover"></div>
 					<div id="menu-content">
