Adjust image size in work-descriptions

--- a/works/collisions/description-en.html
+++ b/works/collisions/description-en.html
@@ -34,9 +34,11 @@
 				<h1>Vehicle collisions in Edinburgh</h1>
 				<h3>3D mapped motor vehicle collisions in Edinburgh, 2012</h3>
 			</div>
-			<a href="https://kaz-ogiwara.github.io/works/collisions/">
-				<img id="eyecatch" src="../../assets/img/eyecatch_collisions.png">
-			</a>
+			<div id="eyecatch-block">
+				<a href="https://kaz-ogiwara.github.io/works/collisions/">
+					<img id="eyecatch" src="../../assets/img/eyecatch_collisions.png">
+				</a>
+			</div>
 			<div id="article-block">
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://data.edinburghopendata.info/dataset/vehicle-collisions" target="_blank">Edinburgh Open Data</a></p>
