--- a/works/earthquakes/description-en.html
+++ b/works/earthquakes/description-en.html
@@ -34,9 +34,11 @@
 				<h1>Earthquakes on the earth</h1>
 				<h3>Animation of earthquakes on the earth in the past an hour to 30 days</h3>
 			</div>
-			<a href="https://kaz-ogiwara.github.io/works/earthquakes/">
-				<img id="eyecatch" src="../../assets/img/eyecatch_earthquakes.png">
-			</a>
+			<div id="eyecatch-block">
+				<a href="https://kaz-ogiwara.github.io/works/earthquakes/">
+					<img id="eyecatch" src="../../assets/img/eyecatch_earthquakes.png">
+				</a>
+			</div>
 			<div id="article-block">
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/" target="_blank">US Georogical Survey</a></p>
