--- a/works/musicxml/description-en.html
+++ b/works/musicxml/description-en.html
@@ -34,9 +34,11 @@
 				<h1>Music score visualization</h1>
 				<h3>Visualization of classic music score from Music XML</h3>
 			</div>
-			<a href="https://kaz-ogiwara.github.io/works/musicxml/">
-				<img id="eyecatch" src="../../assets/img/eyecatch_musicxml.png">
-			</a>
+			<div id="eyecatch-block">
+				<a href="https://kaz-ogiwara.github.io/works/musicxml/">
+					<img id="eyecatch" src="../../assets/img/eyecatch_musicxml.png">
+				</a>
+			</div>
 			<div id="article-block">
         <p></p>
         <p>This work was submitted as a class assignment.</p>
