--- a/works/nobelprize/description-en.html
+++ b/works/nobelprize/description-en.html
@@ -34,9 +34,11 @@
 				<h1>Nobel Prize laureattes getting older</h1>
 				<h3></h3>
 			</div>
-			<a href="https://kaz-ogiwara.github.io/works/nobelprize/">
-				<img id="eyecatch" src="../../assets/img/eyecatch_nobelprize.png">
-			</a>
+			<div id="eyecatch-block">
+				<a href="https://kaz-ogiwara.github.io/works/nobelprize/">
+					<img id="eyecatch" src="../../assets/img/eyecatch_nobelprize.png">
+				</a>
+			</div>
 			<div id="article-block">
         <p> is a visualisation of how Nobel Prize laureates have got older from the beginning of the prize. The winners of this prize are gradually getting older over the past 115 years, especially in the field of natural sciences. In Physics, for example, the latest ten laureates (avg. 71.1) are 23 years older than the first ten (avg. 47.8).</p>
         <p>The main feature of the visualisation is a composite graph that shows laureates with dots and the average age of the past 30 years displayed as a line. You can select a prize (trend line and laureates) and a line of another prize for comparison, from the select boxes above the graph. When the graph (each year) was hovered, detailed information of the winner in that year will be shown in the bottom­ right.</p>
