--- a/works/population/description-en.html
+++ b/works/population/description-en.html
@@ -34,9 +34,11 @@
 				<h1>Population of Japan</h1>
 				<h3>Population of Japan from 1980 to 2040, in each age class</h3>
 			</div>
-			<a href="https://kaz-ogiwara.github.io/works/population/">
-				<img id="eyecatch" src="../../assets/img/eyecatch_population.png">
-			</a>
+			<div id="eyecatch-block">
+				<a href="https://kaz-ogiwara.github.io/works/population/">
+					<img id="eyecatch" src="../../assets/img/eyecatch_population.png">
+				</a>
+			</div>
 			<div id="article-block">
         <p>This work was submitted as a class assignment.</p>
         <p>Languages and libraries: JavaScript (Three.js, jQuery), SQL for data acquisition and process</p>
