--- a/works/temperature/description-en.html
+++ b/works/temperature/description-en.html
@@ -34,9 +34,11 @@
 				<h1>140 years temperature in Tokyo</h1>
 				<h3></h3>
 			</div>
-			<a href="https://kaz-ogiwara.github.io/works/temperature/">
-				<img id="eyecatch" src="../../assets/img/eyecatch_temperature.png">
-			</a>
+			<div id="eyecatch-block">
+				<a href="https://kaz-ogiwara.github.io/works/temperature/">
+					<img id="eyecatch" src="../../assets/img/eyecatch_temperature.png">
+				</a>
+			</div>
 			<div id="article-block">
         <p>This visualisation is a heat map which describes how daily average temperature in Tokyo has changed over the past 140 years, from 1886 to 2015. Each dot, which can be divided into nine colours from blue to red, describes an average temperature on each day. By hovering each dot, you can check the correct temperature on that day. The story of this visualisation is that Tokyo is gradually becoming hotter: We can see the summer is getting hotter and longer, and, in contrast, winter is getting warmer and shorter.</p>
         <p>This work was submitted as a class assignment.</p>
