--- a/works/tourists/description-en.html
+++ b/works/tourists/description-en.html
@@ -34,9 +34,11 @@
 				<h1>Tourists to Japan</h1>
 				<h3>Number of tourists from each country to each prefecture in Japan, in 2015</h3>
 			</div>
-			<a href="https://kaz-ogiwara.github.io/works/tourists/">
-				<img id="eyecatch" src="../../assets/img/eyecatch_tourists.png">
-			</a>
+			<div id="eyecatch-block">
+				<a href="https://kaz-ogiwara.github.io/works/tourists/">
+					<img id="eyecatch" src="../../assets/img/eyecatch_tourists.png">
+				</a>
+			</div>
 			<div id="article-block">
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://opendata.resas-portal.go.jp/docs/api/v1/index.html" target="_blank">RESAS by Cabinet Office</a></p>
