--- a/works/trade/description-en.html
+++ b/works/trade/description-en.html
@@ -34,9 +34,11 @@
 				<h1>Material to Product</h1>
 				<h3>Import and Export between Japan and the World, 2016</h3>
 			</div>
-			<a href="https://kaz-ogiwara.github.io/works/trade/">
-				<img id="eyecatch" src="../../assets/img/eyecatch_trade.png">
-			</a>
+			<div id="eyecatch-block">
+				<a href="https://kaz-ogiwara.github.io/works/trade/">
+					<img id="eyecatch" src="../../assets/img/eyecatch_trade.png">
+				</a>
+			</div>
 			<div id="article-block">
         <p>This visualisation is an animated sankey diagram which describes imports and exports between Japan and other countries. Vertical four bars indicate respectively (from left) countries of import source, imported products, exported products, and countries of export destination. When these bars are hovered on, breakdowns of import / export are shown in the shape of bezier curves. For example, if the top­left section (imports from China) is hovered on, the imported value by goods from China is displayed. The heights of bars and the thickness of curves depend on the value (1,000,000 GBP, converted as 1 GBP = 146 JPY).</p>
         <p>This work was submitted as a class assignment.</p>
