--- a/works/dissolution/description-en.html
+++ b/works/dissolution/description-en.html
@@ -34,9 +34,11 @@
 				<h1>Elections and Dissolutions in The G7</h1>
 				<h3>Timeline of elections and dissolutions in the G7 countries after WWII</h3>
 			</div>
-			<a href="https://kaz-ogiwara.github.io/works/dissolution/">
-				<img id="eyecatch" src="../../assets/img/eyecatch_dissolution.png">
-			</a>
+			<div id="eyecatch-block">
+				<a href="https://kaz-ogiwara.github.io/works/dissolution/">
+					<img id="eyecatch" src="../../assets/img/eyecatch_dissolution.png">
+				</a>
+			</div>
 			<div id="article-block">
         <p>This is a timeline of elections and dissolutions in the G7 countries after WWII.</p>
         <p>While Prime Minister of Japan virtually has a right to dissolve The House of Representatives, it has been often criticized to be arbitrary. This visualisation shows national elections of G7 countries after WWII, focusing on causes of elections.</p>
