--- a/works/nobelprize/description-en.html
+++ b/works/nobelprize/description-en.html
@@ -5,11 +5,11 @@
 		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 		<meta property="og:url" content="https://kaz-ogiwara.github.io/works/nobelprize/description-en.html" />
 		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Nobel Prize laureattes getting older" />
-		<meta property="og:description" content="" />
+		<meta property="og:title" content="Scientists Making a Queue" />
+		<meta property="og:description" content="How Nobel Prize laureates are Getting Older" />
 		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_nobelprize.png" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<title>Nobel Prize laureattes getting older</title>
+		<title>Scientists Making a Queue</title>
     <link rel="stylesheet" href="../../assets/css/style.css">
 	</head>
 	<body class="work-description">
@@ -30,9 +30,9 @@
 				</div>
 			</div>
 			<div id="title-block">
-				<div class="date"></div>
-				<h1>Nobel Prize laureattes getting older</h1>
-				<h3></h3>
+				<div class="date">May 2017</div>
+				<h1>Scientists Making a Queue</h1>
+				<h3>How Nobel Prize laureates are Getting Older</h3>
 			</div>
 			<div id="eyecatch-block">
 				<a href="https://kaz-ogiwara.github.io/works/nobelprize/">
