--- a/works/temperature/description-en.html
+++ b/works/temperature/description-en.html
@@ -6,7 +6,7 @@
 		<meta property="og:url" content="https://kaz-ogiwara.github.io/works/temperature/description-en.html" />
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="140 years temperature in Tokyo" />
-		<meta property="og:description" content="" />
+		<meta property="og:description" content="Daily average temperature in Tokyo over the past 140 years" />
 		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<title>140 years temperature in Tokyo</title>
@@ -30,9 +30,9 @@
 				</div>
 			</div>
 			<div id="title-block">
-				<div class="date"></div>
+				<div class="date">June 2017</div>
 				<h1>140 years temperature in Tokyo</h1>
-				<h3></h3>
+				<h3>Daily average temperature in Tokyo over the past 140 years</h3>
 			</div>
 			<div id="eyecatch-block">
 				<a href="https://kaz-ogiwara.github.io/works/temperature/">
