--- a/index.html
+++ b/index.html
@@ -41,22 +41,23 @@
 			</div>
 			<div id="about-block">
 				<section>
-					<h3>Education</h3>
 					<div class="subsection">
-						<h4>
-							<span class="bold">University of Edinburgh</span>, Edinburgh, United Kingdom
-						</h4>
-						<p class="gray">September 2016 - August 2017</p>
-						<p class="degree">Master of Science (Design and Digital Media)</p>
+						<span class="strong">Born: </span>1987
 					</div>
-				</section>
-				<section>
-					<h3>Work Experience</h3>
 					<div class="subsection">
-						<h4>
-							<span class="bold">Data Visualization Engineer</span> at Toyo Keizai Inc., Tokyo, Japan
-						</h4>
-						<p class="gray">September 2017 - Present</p>
+						<span class="strong">Nationality: </span>Japanese
+					</div>
+					<div class="subsection">
+						<span class="strong">Alma mater: </span>University of Edinburgh (MSc. Design and Digital Media)
+					</div>
+					<div class="subsection">
+						<span class="strong">Residence: </span>Yokohama, Japan
+					</div>
+					<div class="subsection">
+						<span class="strong">Currently working as: </span>Data Visualization Engineer at Toyo Keizai Inc.
+					</div>
+					<div class="subsection">
+						<a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
 					</div>
 				</section>
 			</div>
