--- a/about/index.html
+++ b/about/index.html
@@ -38,36 +38,36 @@
 				<section>
 					<h2>Kazuki OGIWARA</h1>
 					<h5>Data Visualization Engineer in Tokyo</h5>
-					<p><a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a></p>
-				</section>
-				<section>
-					<h3>Education</h3>
 					<div class="subsection">
-						<h4>
-							<span class="bold">University of Edinburgh</span>, Edinburgh, United Kingdom
-						</h4>
-						<p class="gray">September 2016 - August 2017</p>
-						<p class="degree">Master of Science (Design and Digital Media)</p>
+						<span class="strong">Born: </span>1987
 					</div>
 					<div class="subsection">
-						<h4>
-							<span class="bold">University of Tsukuba</span>, Tsukuba, Japan
-						</h4>
-						<p class="gray">April 2006 - March 2010</p>
-						<p>Bachelor of Human Science (Social Psychology)</p>
+						<span class="strong">Nationality: </span>Japanese
+					</div>
+					<div class="subsection">
+						<span class="strong">Alma mater: </span>University of Edinburgh (MSc. Design and Digital Media)
+					</div>
+					<div class="subsection">
+						<span class="strong">Residence: </span>Yokohama, Japan
+					</div>
+					<div class="subsection">
+						<span class="strong">Currently working as: </span>Data Visualization Engineer at Toyo Keizai Inc.
+					</div>
+					<div class="subsection">
+						<a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
 					</div>
 				</section>
 				<section>
 					<h3>Work Experience</h3>
 					<div class="subsection">
 						<h4>
-							<span class="bold">Toyo Keizai Inc.</span>, Tokyo, Japan
+							<span class="strong">Toyo Keizai Inc.</span>, Tokyo, Japan
 						</h4>
 						<p class="gray">April 2010 - Present</p>
 					</div>
 					<div class="subsection">
 						<h4>
-							<span class="bold">Data Visualization Engineer</span> at Digital Media Department
+							<span class="strong">Data Visualization Engineer</span> at Digital Media Department
 						</h4>
 						<p class="gray">September 2017 - Present</p>
 					</div>
@@ -77,15 +77,32 @@
 					</div>
 					<div class="subsection">
 						<h4>
-							<span class="bold">Database and Web Developer</span> at Database Business Department
+							<span class="strong">Database and Web Developer</span> at Database Business Department
 						</h4>
 						<p class="gray">April 2014 - August 2016</p>
 					</div>
 					<div class="subsection">
 						<h4>
-							<span class="bold">Data Editor</span> at Database Business Department
+							<span class="strong">Data Editor</span> at Database Business Department
 						</h4>
 						<p class="gray">April 2010 - March 2014</p>
+					</div>
+				</section>
+				<section>
+					<h3>Education</h3>
+					<div class="subsection">
+						<h4>
+							<span class="strong">University of Edinburgh</span>, Edinburgh, United Kingdom
+						</h4>
+						<p class="gray">September 2016 - August 2017</p>
+						<p class="degree">Master of Science (Design and Digital Media)</p>
+					</div>
+					<div class="subsection">
+						<h4>
+							<span class="strong">University of Tsukuba</span>, Tsukuba, Japan
+						</h4>
+						<p class="gray">April 2006 - March 2010</p>
+						<p>Bachelor of Human Science (Social Psychology)</p>
 					</div>
 				</section>
 			</div>
