Change expressions about retrieving data

--- a/works/earthquakes/description-en.html
+++ b/works/earthquakes/description-en.html
@@ -42,7 +42,7 @@
 			<div id="article-block">
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/" target="_blank">US Georogical Survey</a></p>
-        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL for data acquisition and process</p>
+        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
 				<p><a class="button" href="https://kaz-ogiwara.github.io/works/earthquakes/">See the App</a></p>
 				<p class="disclaimer">The app may not be available in your system environment.</p>
 			</div>
