--- a/works/nobelprize/description-en.html
+++ b/works/nobelprize/description-en.html
@@ -44,7 +44,7 @@
         <p>The main feature of the visualisation is a composite graph that shows laureates with dots and the average age of the past 30 years displayed as a line. You can select a prize (trend line and laureates) and a line of another prize for comparison, from the select boxes above the graph. When the graph (each year) was hovered, detailed information of the winner in that year will be shown in the bottom­ right.</p>
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://www.nobelprize.org/" target="_blank">Nobel Prize Official Website</a></p>
-        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL for data acquisition and process</p>
+        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
 				<p><a class="button" href="https://kaz-ogiwara.github.io/works/nobelprize/">See the App</a></p>
 				<p class="disclaimer">The app may not be available in your system environment.</p>
 			</div>
