--- a/works/population/description-en.html
+++ b/works/population/description-en.html
@@ -41,7 +41,7 @@
 			</div>
 			<div id="article-block">
         <p>This work was submitted as a class assignment.</p>
-        <p>Languages and libraries: JavaScript (Three.js, jQuery), SQL for data acquisition and process</p>
+        <p>Languages and libraries: JavaScript (Three.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
 				<p><a class="button" href="https://kaz-ogiwara.github.io/works/population/">See the App</a></p>
 				<p class="disclaimer">The app may not be available in your system environment.</p>
 			</div>
