--- a/works/collisions/description-en.html
+++ b/works/collisions/description-en.html
@@ -42,7 +42,7 @@
 			<div id="article-block">
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://data.edinburghopendata.info/dataset/vehicle-collisions" target="_blank">Edinburgh Open Data</a></p>
-        <p>Languages and libraries: JavaScript (eegeo, jQuery), SQL for data acquisition and process</p>
+        <p>Languages and libraries: JavaScript (eegeo, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
 				<p><a class="button" href="https://kaz-ogiwara.github.io/works/collisions/">See the App</a></p>
 				<p class="disclaimer">The app may not be available in your system environment.</p>
 			</div>
