--- a/works/trade/description-en.html
+++ b/works/trade/description-en.html
@@ -43,7 +43,7 @@
         <p>This visualisation is an animated sankey diagram which describes imports and exports between Japan and other countries. Vertical four bars indicate respectively (from left) countries of import source, imported products, exported products, and countries of export destination. When these bars are hovered on, breakdowns of import / export are shown in the shape of bezier curves. For example, if the top­left section (imports from China) is hovered on, the imported value by goods from China is displayed. The heights of bars and the thickness of curves depend on the value (1,000,000 GBP, converted as 1 GBP = 146 JPY).</p>
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="http://www.customs.go.jp/toukei/info/index_e.htm" target="_blank">Trade Statistics of Japan</a></p>
-        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL for data acquisition and process</p>
+        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
 				<p><a class="button" href="https://kaz-ogiwara.github.io/works/trade/">See the App</a></p>
 				<p class="disclaimer">The app may not be available in your system environment.</p>
 			</div>
